Changed links to static files to use STATIC_URL_PREFIX Added optional leading / in main url router urls.py

--- a/DNAOrderApp/order/templates/order/fmprojectlist.html
+++ b/DNAOrderApp/order/templates/order/fmprojectlist.html
@@ -9,10 +9,10 @@
 
 
 {% block extra_css_js %}
-<link href="{{ STATIC_URL }}bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" media="screen">
-<link href="{{ STATIC_URL }}bootstrap-modal/js/bootstrap-modalmanager.js" rel="text/javascript" media="screen">
-<link href="{{ STATIC_URL }}bootstrap-modal/js/bootstrap-modal.js" rel="text/javascript" media="screen">
-<link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
+<link href="{{ STATIC_URL_PREFIX }}bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" media="screen">
+<link href="{{ STATIC_URL_PREFIX }}bootstrap-modal/js/bootstrap-modalmanager.js" rel="text/javascript" media="screen">
+<link href="{{ STATIC_URL_PREFIX }}bootstrap-modal/js/bootstrap-modal.js" rel="text/javascript" media="screen">
+<link rel="stylesheet" href="{{ STATIC_URL_PREFIX }}django_tables2/themes/paleblue/css/screen.css" />
 
 
 <style>
