--- a/DNAOrderApp/order/templates/order/fmprojectlist.html
+++ b/DNAOrderApp/order/templates/order/fmprojectlist.html
@@ -5,20 +5,21 @@
 {% load get_affiliated_institute_list %}
 {% load create_formset_list %}
 {% load create_aiform %}
+{% load staticfiles %}
 
 {% block title %}Project List{% endblock title %}
 
 
 {% block extra_css_js %}
 
-<link href="{{ STATIC_URL_PREFIX }}bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" media="screen">
-<link href="{{ STATIC_URL_PREFIX }}bootstrap-modal/js/bootstrap-modalmanager.js" rel="text/javascript" media="screen">
-<link href="{{ STATIC_URL_PREFIX }}bootstrap-modal/js/bootstrap-modal.js" rel="text/javascript" media="screen">
-<!--<link rel="stylesheet" href="{{ STATIC_URL_PREFIX }}django_tables2/themes/paleblue/css/screen.css" />-->
+<link href="{% static "bootstrap-modal/css/bootstrap-modal.css" %}" rel="stylesheet" media="screen">
+<link href="{% static "bootstrap-modal/js/bootstrap-modalmanager.js" %}" rel="text/javascript" media="screen">
+<link href="{% static "bootstrap-modal/js/bootstrap-modal.js" %}" rel="text/javascript" media="screen">
+<!--<link rel="stylesheet" href="{% static "django_tables2/themes/paleblue/css/screen.css" %}" />-->
 
-<script src="{{ STATIC_URL_PREFIX }}jquery.watermark-3.1.4/jquery.watermark.js" rel="text/javascript" media="screen"></script>
+<script src="{% static "jquery.watermark-3.1.4/jquery.watermark.js" %}" rel="text/javascript" media="screen"></script>
 <!--https://code.google.com/p/jquery-watermark/-->
-<!-- <script src="{{ STATIC_URL_PREFIX }}twitter-bootstrap-typeahead/js/bootstrap-typeahead.js" rel="text/javascript" media="screen"></script> -->
+<!-- <script src="{% static "twitter-bootstrap-typeahead/js/bootstrap-typeahead.js" %}" rel="text/javascript" media="screen"></script> -->
 <!-- https://github.com/tcrosen/twitter-bootstrap-typeahead -->
 
 <!-- JQUERY AUTOCOMPLETE PLUGIN -->
