--- a/DNAOrderApp/order/templates/order/project-list-origin.html
+++ b/DNAOrderApp/order/templates/order/project-list-origin.html
@@ -1,12 +1,13 @@
 {% extends "base_template.html" %} 
+{% load staticfiles %}
 
 {% block title %}Project List{% endblock title %}
 
 
 {% block extra_css_js %}
-<link href="{{ STATIC_URL }}bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" media="screen">
-<link href="{{ STATIC_URL }}bootstrap-modal/js/bootstrap-modalmanager.js" rel="stylesheet" media="screen">
-<link href="{{ STATIC_URL }}bootstrap-modal/js/bootstrap-modal.js" rel="stylesheet" media="screen">
+<link href="{% static "bootstrap-modal/css/bootstrap-modal.css" %}" rel="stylesheet" media="screen">
+<link href="{% static "bootstrap-modal/js/bootstrap-modalmanager.js" %}" rel="stylesheet" media="screen">
+<link href="{% static "bootstrap-modal/js/bootstrap-modal.js" %}" rel="stylesheet" media="screen">
 {% endblock extra_css_js %}
 
 {% block active-navbar %} 
