--- a/DNAOrderApp/order/templates/order/test_template.html
+++ b/DNAOrderApp/order/templates/order/test_template.html
@@ -1,11 +1,12 @@
 {% extends "base_template.html" %} 
+{% load staticfiles %}
 
 {% block title %}Project List{% endblock title %}
 
 {% block extra_css_js %}
-<link href="{{ STATIC_URL }}bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" media="screen">
-<link href="{{ STATIC_URL }}bootstrap-modal/js/bootstrap-modalmanager.js" rel="stylesheet" media="screen"
-<link href="{{ STATIC_URL }}bootstrap-modal/js/bootstrap-modal.js" rel="stylesheet" media="screen">
+<link href="{% static "bootstrap-modal/css/bootstrap-modal.css" %}" rel="stylesheet" media="screen">
+<link href="{% static "bootstrap-modal/js/bootstrap-modalmanager.js" %}" rel="stylesheet" media="screen"
+<link href="{% static "bootstrap-modal/js/bootstrap-modal.js" %}" rel="stylesheet" media="screen">
 
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
