--- a/DNAOrderApp/order/templates/order/index.html
+++ b/DNAOrderApp/order/templates/order/index.html
@@ -381,16 +381,14 @@ section.single-page h1 {
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 <link href="../../static/legend-by-Dzyngiri/css/fontello.css" type="text/css" rel="stylesheet">
- <!-- <link href="../../static/legend-by-Dzyngiri/css/style.css" rel="stylesheet"> -->
 
 {% endblock extra_css_js %}
 
 {% block title %}{{ title }}{% endblock title %}
 
 {% block active-navbar %} 
-<li class="active"><a href="#home">Home</a></li>
+<li><a href="#home">Get Started</a></li>
 <li><a href="#feature">Mission</a></li>
-<li><a href="#contact">Get Started</a></li>
 <li><a href="#services">Contact</a></li>
 {% endblock active-navbar %}
 
