--- a/DNAOrderApp/order/templates/order/welcome-collaborator.html
+++ b/DNAOrderApp/order/templates/order/welcome-collaborator.html
@@ -1,3 +1,5 @@
+<!-- OUTDATED - FOR REFERENCE ONLY, FOR GENERAL LAYOUT FOR THE WELL FILLING PROCEDURE -->
+
 {% extends "base_template.html" %} 
 
 {% block title %}Project List{% endblock title %}
